# GalaxySimulator

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  vcpkg.json
GalaxySimulator/: CMakeLists.txt  GalaxySimulatorLauncher.cpp  GalaxySimulatorLauncher.h  GalaxySimulatorLauncher.ixx  MyTest.ixx  galaxy_simulator.ixx  galaxy_simulator_launcher.ixx  kernel.ixx  main.cpp  shader.ixx
TestModules/: CMakeLists.txt  event.cpp  event.ixx  eventsystem.cpp  eventsystem.ixx  eventsystemother.cpp  eventsystemother.ixx  foo.cpp  foo.cppm  foo.ixx  main.cpp
TestOpenCL/: CMakeLists.txt
dependencies/OpenCL/share/cmake/OpenCLHeaders/: OpenCLHeadersTargets.cmake
dependencies/OpenCL/share/cmake/OpenCLHeadersCpp/: OpenCLHeadersCppTargets.cmake
dependencies/OpenCL/share/cmake/OpenCLICDLoader/: OpenCLICDLoaderTargets.cmake
dependencies/OpenCL/share/cmake/OpenCLUtils/: OpenCLUtilsTargets.cmake
dependencies/OpenCL/share/cmake/OpenCLUtilsCpp/: OpenCLUtilsCppConfigVersion.cmake  OpenCLUtilsCppTargets.cmake
test/: CMakeLists.txt  OpenClTest.cpp
